[gd_scene load_steps=5 format=2]

[ext_resource path="res://Ball.gd" type="Script" id=1]
[ext_resource path="res://art/sport_basketball.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 9.0

[node name="Ball" type="RigidBody2D"]
mode = 2
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "New Anim"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="right_side_detector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 12, 0 )

[node name="up_side_detector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -12 )

[node name="low_side_detector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 12 )

[node name="left_side_detector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -12, 0 )
[connection signal="body_shape_entered" from="." to="." method="body_shape_entered"]
